some small fixes